<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UserDictionaryApp</string>
    <string name="register_word">登録したい言葉</string>
    <string name="register_word_hint">(ﾉ´∀｀*)</string>
    <string name="shortcut">ショートカット(オプション)</string>
    <string name="shortcut_hint">かおもじ</string>
    <string name="action_settings">設定</string>
    <string name="save">保存</string>
</resources>
