<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small"
            android:textColor="@color/font_label"
            android:text="@string/register_word" />

        <EditText
            android:id="@+id/edit_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_base_half"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/font_main"
            android:hint="@string/register_word_hint"
            android:textColorHint="@color/font_hint" />

        <Space
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small"
            android:textColor="@color/font_label"
            android:layout_marginLeft="60dp"
            android:text="@string/shortcut" />

        <EditText
            android:id="@+id/edit_shortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="@dimen/margin_base_half"
            android:layout_marginTop="@dimen/margin_base_half"
            android:layout_marginBottom="@dimen/margin_base_half"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/font_main"
            android:hint="@string/shortcut_hint"
            android:textColorHint="@color/font_hint" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="240dp"
            android:layout_height="85dp"
            android:layout_marginTop="30dp"
            android:minHeight="0dp"
            android:background="@drawable/btn_none"
            android:text="@string/save"
            android:padding="0dp"
            android:textSize="@dimen/font_medium"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_close"
        android:layout_margin="@dimen/margin_base"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_close" />
</RelativeLayout>
